# Python-Embedding

./: CMakeLists.txt  desktop.ini  main.cpp  setup.bat
